# proximo

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LANDSCAPE.md  POSITIONING.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  THREAT_MODEL.md  VERIFY.md  lhm.plugin.json  pyproject.toml  server.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dockerhub-mirror.yml  release-pypi.yml  release.yml  scorecard.yml  trivy.yml
debian/: README.Debian  changelog  control  copyright  proximo.1  proximo.docs  proximo.links  proximo.lintian-overrides  proximo.manpages  proximo.postrm  rules
debian/tests/: control  smoke
docs/: SETUP.md  THREAT_MODEL.md  TOOLS.md  known-issues.md
docs/demo/: demo.cast  hand-the-keys.cast  ledger-tamper.cast
docs/plans/: 2026-06-15-acl-blast-radius.md  2026-06-15-blast-radius-engine.md  2026-06-15-firewall-network-blast-radius.md  2026-06-16-guest-destroy-blast-radius.md  2026-06-19-publishing-pipeline.md  2026-06-23-prove-expected-head-keyed-default.md  2026-06-23-release-0.7.0-runbook.md  2026-06-29-native-multi-target.md  2026-07-06-agent-front-door-design.md  2026-07-06-mint-helper-design.md  2026-07-06-mint-helper-impl-plan.md  2026-07-06-open-door-flip-runbook.md  2026-07-06-open-door-impl-plan.md  2026-07-06-pdm-fleet-control-design.md
docs/specs/: 2026-06-14-complete-half-built-planes.md  2026-06-15-acl-blast-radius.md  2026-06-15-blast-radius-engine.md  2026-06-15-firewall-network-blast-radius.md  2026-06-16-guest-destroy-blast-radius.md  2026-06-19-async-task-wait.md  2026-06-19-disk-move-blast-radius.md  2026-06-19-firewall-lockout-blast-radius.md  2026-06-19-migrate-disk-residency-blast.md  2026-06-19-publishing-pipeline-design.md  2026-06-19-signed-agent-cards.md  2026-06-19-storage-nodes-restrict-blast.md  2026-06-23-prove-expected-head-keyed-default-design.md  2026-06-29-native-multi-target-design.md
packaging/: optional-daemon-mode.service.example  proximo.env.example  targets.example.toml
requirements/: build.in  build.txt  dev.txt  runtime.txt  sbom.txt
scripts/: copy_ripple_check.py  gen_deeplinks.py  gen_lobehub_manifest.py  gen_requirements.sh  gen_tools_doc.py  mutation_smoke.py  reach.py  release.sh  release_leak_audit.py  version_tools.py
scripts/demo/: README.md  demo.py  hand_the_keys.py
scripts/live-smoke/: README.md  access-crud-smoke.py  acl-blast-smoke.py  backup-smoke.py  blast-smoke.py  capture-shapes.py  clone-smoke.py  content-delete-smoke.py  coverage-blast-smoke.py  create-container-smoke.py  disk-resize-smoke.py  envelope-smoke.py  fw-reach-smoke.py  fwobjects-smoke.py  fwobjects-smoke.sh  guest-lifecycle-smoke.py  harules-smoke.py  lib.sh  migrate-online-smoke.py  multi-target-smoke.py  netplane-smoke.py  netplane-smoke.sh  pbs-gc-smoke.py  pbs-namespace-smoke.py  pbs-prune-smoke.py  pbs-reprove-all.py  pbs-snapshot-delete-smoke.py  pbs-verify-smoke.py  pbs_smoke_lib.py  pdm-fleet-smoke.py  pdm-remote-migrate-smoke.py  pdm-smoke.py  phase1-smoke.py  phase1-smoke.sh  pmg-smoke.py  pmg-wave8-smoke.py  prove-smoke.py  readonly-smoke.py  readonly-smoke.sh  run-all.py  (+5 more)
src/proximo/: __init__.py  __main__.py  _a2a_entry.py  _http_entry.py  _mcp_http_entry.py  _secretfile.py  _tls.py  access.py  access_governance.py  access_users.py  acme_certs.py  apt.py  audit.py  audit_anchor.py  backends.py  backup.py  backup_schedules.py  blast.py  ceph.py  cloudinit.py  cluster_ops.py  config.py  config_edit.py  consent.py  contain.py  diagnose.py  disk_ops.py  doctor.py  envelope.py  firewall.py  freshness.py  governed.py  hello.py  httpface.py  hw_mappings.py  lease.py  mcphttp.py  mint.py  network.py  node_lifecycle.py  (+38 more)
src/proximo/a2a/: __init__.py  __main__.py  app.py  card.py  executor.py  signing.py  skills.py
src/proximo/tools/: __init__.py  pbs.py  pbs_access.py  pbs_acme.py  pbs_admin.py  pbs_datastore_admin.py  pbs_disks.py  pbs_metrics.py  pbs_node.py  pbs_notifications.py  pbs_s3.py  pbs_tape_config.py  pbs_tape_jobs.py  pbs_tape_media.py  pbs_tape_ops.py  pdm.py  pdm_fleet.py  pmg_apt.py  pmg_identity.py  pmg_mail.py  pmg_node.py  pmg_rules.py  pmg_welcomelist.py  pve_access.py  pve_agent.py  pve_apt.py  pve_backup.py  pve_ceph.py  pve_certs.py  pve_cluster.py  pve_firewall.py  pve_guest.py  pve_network.py  pve_node.py  pve_observability.py  pve_sdn_fabrics.py  pve_sdn_firewall.py  pve_sdn_objects.py  pve_sdn_routing.py
tests/: conftest.py  test_a2a_auth.py  test_a2a_card.py  test_a2a_csrf.py  test_a2a_e2e.py  test_a2a_entry.py  test_a2a_executor.py  test_a2a_integration.py  test_a2a_signing.py  test_a2a_skills.py  test_access.py  test_access_governance.py  test_access_prune.py  test_access_users.py  test_acme_order.py  test_apt.py  test_audit_harden_0_7_1.py  test_backends.py  test_backup.py  test_backup_schedules.py  test_blast.py  test_blast_acl.py  test_blast_content_delete.py  test_blast_disk_move.py  test_blast_firewall.py  test_blast_firewall_lockout.py  test_blast_firewall_redteam.py  test_blast_guest_destroy.py  test_blast_iface.py  test_blast_migrate.py  test_blast_seam.py  test_blast_storage_nodes.py  test_ceph.py  test_certs.py  test_cloudinit.py  test_cluster_ops.py  test_config.py  test_config_edit.py  test_confirm_sweep_pbs.py  test_confirm_sweep_pbs_acme.py  (+138 more)
tests/live_shapes/fixtures/: README.md  pve_real_shapes.json
