[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proximo-proxmox"
version = "0.2.0"
description = "The ethical Proxmox MCP — REST API management + scoped in-container exec, behind clean native tools, least-privilege and audited."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "John Broadway" }, { name = "Claude (Anthropic)" }]
keywords = ["proxmox", "pve", "pbs", "mcp", "model-context-protocol", "a2a", "agent2agent", "lxc", "homelab", "infrastructure", "self-hosted"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "mcp>=1.2.0",   # official Model Context Protocol SDK (FastMCP). VERIFY exact version/API at build (docs-first).
  "httpx>=0.27",  # Proxmox REST API client
]

[project.optional-dependencies]
# The A2A (Agent2Agent) face is OPTIONAL — the MCP core keeps zero extra deps.
# Install with: pip install 'proximo[a2a]'  (adds the official a2a-sdk + an ASGI server).
a2a = ["a2a-sdk>=1.1", "uvicorn>=0.30", "starlette>=0.37"]
dev = [
  "pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "pyright>=1.1",
  "a2a-sdk>=1.1", "uvicorn>=0.30", "starlette>=0.37",  # so the A2A slice's tests run
]

[project.scripts]
proximo = "proximo.server:main"            # the MCP server (stdio)
proximo-proxmox = "proximo.server:main"    # alias matching the PyPI dist name (for `uvx proximo-proxmox`)
proximo-a2a = "proximo._a2a_entry:main"     # A2A server shim (friendly error without [a2a] extra)

[tool.hatch.build.targets.wheel]
packages = ["src/proximo"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# S = flake8-bandit (security): we run a hypervisor tool, lint for it.
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # `assert` is how tests assert; placeholder passwords/token_path aren't secrets

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
# Type-check the shipped package only. Structural test doubles (_FakeApi, mock kwargs)
# trip nominal-typing false positives that don't reflect runtime behavior; pytest is
# what guards the tests. Scoping here keeps `pyright` honestly clean.
include = ["src"]
