[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proximo-proxmox"
version = "0.8.1"
description = "The Proxmox MCP you can hand the keys — VE + Backup Server + Mail Gateway on one clean surface: every dangerous op planned, undoable, and audited."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "John Broadway" }, { name = "Claude (Anthropic)" }]
keywords = ["proxmox", "pve", "pbs", "pmg", "mail-gateway", "mcp", "model-context-protocol", "a2a", "agent2agent", "lxc", "homelab", "infrastructure", "self-hosted"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "mcp>=1.2.0",   # official Model Context Protocol SDK (FastMCP). VERIFY exact version/API at build (docs-first).
  "httpx>=0.27",  # Proxmox REST API client
]

[project.optional-dependencies]
# The A2A (Agent2Agent) face is OPTIONAL — the MCP core keeps zero extra deps.
# Install with: pip install 'proximo-proxmox[a2a]'  (adds the official a2a-sdk + an ASGI server).
# a2a-sdk[signing] pulls PyJWT for the SIGNET card-signing helpers; cryptography is used directly
# by proximo.a2a.signing — declared explicitly rather than relied on transitively.
a2a = ["a2a-sdk[signing]>=1.1", "uvicorn>=0.30", "starlette>=0.37", "cryptography>=42"]
dev = [
  "pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "pyright>=1.1",
  "a2a-sdk[signing]>=1.1", "uvicorn>=0.30", "starlette>=0.37", "cryptography>=42",  # A2A slice + SIGNET tests
]

[project.scripts]
proximo = "proximo.server:main"            # the MCP server (stdio)
proximo-proxmox = "proximo.server:main"    # alias matching the PyPI dist name (for `uvx proximo-proxmox`)
proximo-a2a = "proximo._a2a_entry:main"     # A2A server shim (friendly error without [a2a] extra)

[tool.hatch.build.targets.wheel]
packages = ["src/proximo"]

# The sdist is a SECOND publish path (PyPI hosts it alongside the wheel). Without an explicit allowlist
# hatchling bundles the whole repo root — including .gitea/ (internal forge CI + the node-name deny
# list), .remember/, CLAUDE.md, and the internal strategy docs. Ship ONLY the user-facing set, the same
# way the github mirror is curated. Deny-by-default: add a path here on purpose, never by omission.
[tool.hatch.build.targets.sdist]
include = [
    "/src/proximo",
    "/README.md",
    "/SETUP.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# S = flake8-bandit (security): we run a hypervisor tool, lint for it.
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # `assert` is how tests assert; placeholder passwords/token_path aren't secrets
"scripts/live-smoke/**" = ["S101", "S105", "S106", "S603", "S607"]  # live smokes are test-like harnesses (assert-checks, placeholder creds, and the orchestrator execs vetted registry scripts)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
# Type-check the shipped package only. Structural test doubles (_FakeApi, mock kwargs)
# trip nominal-typing false positives that don't reflect runtime behavior; pytest is
# what guards the tests. Scoping here keeps `pyright` honestly clean.
include = ["src"]
